--- a/debian/rules
+++ b/debian/rules
@@ -1,4 +1,4 @@
-#!/usr/bin/make -f
+#!/var/usr/bin/make -f
 
 #export DH_VERBOSE = 1
 
@@ -10,4 +10,4 @@ override_dh_installsystemd:
 
 
 override_dh_auto_install:
-	python3 ./setup.py install --root=$(CURDIR)/debian/tmp --prefix=/usr --install-layout=deb
+	python3 ./setup.py install --root=$(CURDIR)/debian/tmp --prefix=/var/usr --install-layout=deb
